--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "homepage": "https://github.com/intoxstudio/restrict-user-access",
   "devDependencies": {
-    "grunt": "^1.0.0",
-    "grunt-contrib-less": "^1.4.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "load-grunt-tasks": "^3.5.2"
+    "gulp": "^4.0.0",
+    "gulp-less": "^3.4.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^3.0.0",
+    "gulp-zip": "^4.1.0",
+    "less-plugin-autoprefix": "^1.5.1",
+    "less-plugin-clean-css": "^1.5.1"
   }
 }
