--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "type": "git",
     "url": "https://github.com/intoxstudio/restrict-user-access.git"
   },
+  "name": "restrict-user-access",
+  "version":"0.18",
+  "description": "",
   "author": "Joachim Jensen",
   "license": "GPLv3",
   "bugs": {
@@ -12,11 +15,11 @@
   },
   "homepage": "https://github.com/intoxstudio/restrict-user-access",
   "devDependencies": {
+    "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-less": "^3.4.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
-    "gulp-zip": "^4.1.0",
     "less-plugin-autoprefix": "^1.5.1",
     "less-plugin-clean-css": "^1.5.1"
   }
