[RUA-56] backwards compat

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
             "level.php",
             "freemius.php",
             "api/deprecated.php",
-            "api/functions.php"
+            "api/functions.php",
+            "automators/base.php"
         ]
     },
     "authors": [
