--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.1"
+        "php": "^7.1 || ^8.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.64"
