--- a/composer.json
+++ b/composer.json
@@ -7,34 +7,6 @@
             "RestrictUserAccess\\": "src/"
         },
         "files": [
-            "lib/wp-content-aware-engine/bootstrap.php",
-            "src/helpers.php",
-            "lib/wp-db-updater/wp-db-updater.php",
-            "helpers/collection.php",
-            "helpers/rua-member-query.php",
-            "interfaces/user_level.php",
-            "interfaces/user.php",
-            "interfaces/level.php",
-            "models/user.php",
-            "models/level.php",
-            "models/user_level.php",
-            "admin/admin.php",
-            "admin/admin_bar.php",
-            "admin/level-list-table.php",
-            "admin/level-overview.php",
-            "admin/level-edit.php",
-            "admin/settings.php",
-            "admin/screen_account.php",
-            "admin/screen_addons.php",
-            "admin/nav-menu.php",
-            "list-members.php",
-            "list-capabilities.php",
-            "app.php",
-            "level.php",
-            "freemius.php",
-            "api/deprecated.php",
-            "api/functions.php",
-            "automators/base.php"
         ]
     },
     "authors": [
@@ -44,13 +16,15 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {
-    },
     "require-dev": {
         "php": "^7.2 || ^8.0",
-        "friendsofphp/php-cs-fixer": "^3.64"
+        "friendsofphp/php-cs-fixer": "^3.89",
+        "phpstan/phpstan": "^2.1",
+        "szepeviktor/phpstan-wordpress": "^2.0",
+        "phpstan/phpstan-strict-rules": "^2.0"
     },
     "scripts": {
+        "test:phpstan": "vendor/bin/phpstan analyse -c phpstan.neon --memory-limit=-1",
         "fix:cs-fixer": "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php"
     }
 }
